--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.github.johnrengelman.shadow' version '1.2.4'
+    id 'com.github.johnrengelman.shadow' version '7.0.0'
 }
 
 group 'pricebasket'
@@ -15,6 +15,6 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.javamoney', name: 'moneta', version: '1.0'
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    implementation group: 'org.javamoney', name: 'moneta', version: '1.0'
+    testImplementation group: 'junit', name: 'junit', version: '4.11'
 }
